# deeplearning-practice

./: .gitignore  Pipfile  pyproject.toml
attentions/additive-attention/: additive-attention-de-en-translator.ipynb  additive-attention-en-de-translator.ipynb  seq2seq-de-en-translator.ipynb
attentions/additive-attention/artifacts/: additive-attention-scheduled-sampling-model-artifacts.json  additive-attention-teacher-forcing-model-artifacts.json  additive-attention-unmasked-model-artifacts.json  seq2seq-basic-model-artifacts.json  seq2seq-final-model-artifacts.json  seq2seq-scheduled-sampling-model-artifacts.json  seq2seq-teacher-forcing-model-artifacts.json
attentions/additive-attention/utils/: multi30k_data_processing_utils.py  train_utils.py
attentions/luong-attention/: luong-attention-de-en-translator.ipynb  luong-dot-attention-de-en-translator.ipynb  luong-general-attention-de-en-translator.ipynb  luong-input-feed-general-attention-de-en-translator.ipynb
attentions/luong-attention/artifacts/: luong-dot-attention-model-artifacts.json  luong-general-attention-model-artifacts.json  luong-input-feeding-general-attention-model-artifacts.json  luong-scaled-dot-attention-model-artifacts.json
attentions/luong-attention/utils/: __init__.py  softmax_analyse.py  train_utils.py
attentions/utils/: train_utils.py
cnn-practice/cifar10-classifier/: cifar10-classifier.ipynb
cnn-practice/cifar10-classifier/artifacts/: final_cnn.json  large_cnn.json  small_cnn.json  (+1 more)
mlp-practice/mnist-classifier/: mnist-mlp.ipynb  mnistclassifier-1l256-adam-0001-20epoch.pth
(+4 files in other folders)
