[project]
name = ""
version = "0.0.1"
requires-python = "~=3.13"
dependencies = [
    "numpy",
    "matplotlib",
    "torchvision",
    "torchaudio",
    "torch",
    "early-stopping-pytorch",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
