[project]
name = ""
version = "0.0.1"
requires-python = "~=3.13"
dependencies = [
    "numpy",
    "matplotlib",
    "torchvision",
    "torchaudio",
    "torch",
    "early-stopping-pytorch",
    "datasets>=4.4.1",
    "jupyter>=1.1.1",
    "notebook>=7.5.1",
    "torchmetrics>=1.8.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
